# Bar-sales-forecasting

./: .gitignore  README.md  app.py  config.py  pyproject.toml  test_predictor.py  train_data.csv  train_data_fold.csv  validate_predictor.py  validate_weather.py
src/models/: predictor.py  train_data.csv
src/services/: file_handler.py
static/: style.css
templates/: index.html  predictions.html  setup_prediction.html  weather_input.html
uploads/: data_without_weather.csv  synthetic_data.csv
